# anthropic-image-converter

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt
src/: anthropic_image_converter.py  optimized_image_sender.py
